syntax = "proto3";

package techschool.pcbook.laptop.v1;

option go_package = ".;pb";


import "options/gorm.proto";
import "google/protobuf/timestamp.proto";
import "laptop/v1/processor_message.proto";
import "laptop/v1/memory_message.proto";
import "laptop/v1/storage_message.proto";
import "laptop/v1/screen_message.proto";
import "laptop/v1/keyboard_message.proto";

message Laptop {
  // @gotags: gorm:"primaryKey"
  option (gorm.opts) = {
    ormable: true
  };
  string id = 1 [(gorm.field).tag = {type: "varchar(100)" primary_key: true}]; 
  string brand = 2;
  string name = 3;

  Cpu cpu = 4;
  Memory ram = 5;
  repeated Gpu gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  // oneof weight {
  //   double weight_kg = 10;
  //   double weight_lb = 11;
  // }
  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}
