syntax = "proto3";

package techschool.pcbook.laptop.v1;

option go_package = ".;pb";

import "options/gorm.proto";

message Screen {
   option (gorm.opts) = {
    ormable: true
  };
  message Resolution {
    uint32 width = 1;
    uint32 height = 2;
  }

  enum Panel {
    UNKNOWN = 0;
    IPS = 1;
    OLED = 2;
  }

  float size_inch = 1;
  Resolution resolution = 2;
  Panel panel = 3;
  bool multitouch = 4;
}
